@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.1.3 update 1
 ----------------------------------------------------------------------
-  3 Enhancements
+  4 Enhancements
   3 Bugfixes
 ----------------------------------------------------------------------
 2.1.3 update 1 vs. 2.1.3
@@ -17,6 +17,8 @@
    Other enhancements:
 
    - File filter for WiX localisation files (.wxl)
+
+   - sdlxliff added to the default list of XLIFF extensions
 
   Bug fixes:
 
